feat(p8): Q-CR 三轮审计全覆盖 — 14项修复 + star/启动脚本 + 验收/实现/答辩三份指南
Author: qxw · Author-ID: 2501060122

## P0/P1 关键修复
- P0-1(frontend): request.js TDZ ReferenceError — 401跳转 redirectTimeoutId 提前声明
- P0-2(backend): JwtConfig.java — 占位密钥多变量检测 + 大小写无关比对
- P0-3(backend): WebMvcConfig.java — /api/v1/exchange-rate 移出白名单(需登录)
- P1-1(backend): TransactionServiceImpl.transfer() — 按账户ID升序加锁(死锁预防)
- P1-3(backend): CategoryServiceImpl.list() — @Cacheable 加 unless 条件(空集合不缓存)
- P1-6(backend): BudgetServiceImpl.save() — 月份格式 YearMonth.parse 严格校验
- P1-7(frontend): request.js isRetryable — 业务错误(余额不足/401)标记 noRetry 绕过重试
- P1-13(backend): RecurringBillServiceImpl.generate() — 交易时间 min(到期日, 当前时间)

## P2/其他修复
- P1-9(frontend): BudgetPage.vue — 取消/关闭弹窗判断逻辑反转
- P1-12(backend): EntityValidator.formatYearMonth — 月份 1-12 + 年份 2000-2100 范围校验
- P2-2(backend): TransactionServiceImpl.update() — 普通交易金额/null纵深防御
- P2-3(backend): LoginInterceptor.writeError() — response.isCommitted() 兜底
- LoginRateLimiter.evictExpired() — 60s节流 + size阈值(防止高并发频繁遍历 Map)

## star/ 新增文件
- star/一键启动.bat — 环境自检 + DB初始化 + 后端编译启动 + 前端构建启动 + 自动浏览器
- star/配置开机自启.bat — Windows 任务计划注册(开机30s自动启动)
- star/系统验收指南.md — P0~P2 全功能验收步骤+预期结果+故障排查(18KB)
- star/系统实现详解.md — 每个功能的文件+行号+完整调用链(46KB, 22章)
- star/答辩准备指南.md — 21道答辩QA + 现场演示流程(21KB)

## 质量验证
- mvn test: 175/175 PASS
- pnpm build: 19 chunks · 680ms · 0 error

Q-CR: Loop1 P0-P2 fixes + Loop2 P1 fixes + Loop3 final audit · Ratchet x1.35→x2.20